--- a/Expert.WebShop.Zavrsni/wwwroot/index.html
+++ b/Expert.WebShop.Zavrsni/wwwroot/index.html
@@ -14,6 +14,9 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <script src="https://kit.fontawesome.com/0166583654.js" crossorigin="anonymous"></script>
+    <script src="font-awesome/solid.js"></script>
+
 </head>
 
 <body>
@@ -33,6 +36,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
     <script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
+   
 </body>
 
 </html>
