--- a/Expert.WebShop.Zavrsni/wwwroot/index.html
+++ b/Expert.WebShop.Zavrsni/wwwroot/index.html
@@ -14,6 +14,7 @@
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
     <link rel="apple-touch-icon" sizes="192x192" href="icon-192.png" />
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/material-base.css">
+    <link rel="stylesheet" href="css/MojStyle.css" />
     <script src="https://kit.fontawesome.com/0166583654.js" crossorigin="anonymous"></script>
     <script src="font-awesome/solid.js"></script>
 
